styles in login

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,9 +4,7 @@
       <h2>ComunidApp</h2>
     </div>
     <ion-buttons slot="start">
-      <ion-menu-button>
-        <img src="../../assets/menu_bar.svg" />
-      </ion-menu-button>
+        <ion-icon name="menu-outline" color="dark" style="margin: 10px;"></ion-icon>
     </ion-buttons>
     <ion-buttons slot="end">
       <ion-button class="notification">
@@ -23,7 +21,7 @@
 <ion-content>
   <div class="search ion-padding">
     <ion-item lines="none">
-      <ion-input placeholder="Search Your Product"></ion-input>
+      <ion-input placeholder="Busca tu producto..."></ion-input>
       <ion-icon name="search-outline" slot="start"></ion-icon>
     </ion-item>
   </div>
@@ -44,6 +42,7 @@
       </ion-card-header>
       <ion-content>
       </ion-content>
+      <ion-button>Ver detalles</ion-button>
     </ion-card>
   </ion-content>
 
